################################################################################
#
# util build
#
################################################################################

# util #########################################################################

add_library(util
  string.cc
  time.cc
  config_parser.cc
)

target_include_directories(util PUBLIC
  ${PROJECT_SOURCE_DIR}
)
